fix on mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -563,8 +563,8 @@ a {
   }
 
   .hero {
-    align-items: start;
-    padding: 82px 14px 34px;
+    align-items: center;
+    padding: 118px 14px 44px;
   }
 
   .eyebrow {
